KCM Touchpad: Load config for touchpad on init

Otherwise the UI will be initialized with the default values of constant
properties like supportsClickMethodAreas or
supportsClickMethodClickfinger. This leads to available configuration
options being invisible, even though they are supported by the touchpad.

BUG: 443011
FIXED-IN: 5.23.2